2004-11-22  John W. Eaton  <jwe@octave.org>

	* pt-arg-list.cc (tree_argument_list::convert_to_const_vector):
	Check to see whether object is a function or function handle
	instead of constant.

2004-11-19  John W. Eaton  <jwe@octave.org>

	* ov-str-mat.cc (octave_char_matrix_str::do_index_op):
	Skip indexing operation if indices are invalid.

	* pr-output.cc (set_range_format, set_complex_matrix_format,
	set_complex_format, set_real_matrix_format, set_real_format):
	Also specify std::ios::fixed for bank format.

2004-11-17  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.1.62.
	(OCTAVE_API_VERSION): Now api-v12.

2004-11-17  David Bateman  <dbateman@free.fr>

	* pt-arg-list.cc (F__end__): Ask dv for the number of elements
	instead indexed_object.

2004-11-16  David Bateman  <dbateman@free.fr>

	* ov.h (octave_value::numel): Now virtual.  Call rep->numel ().
	* ov.cc (octave_value::numel): Delete.
	* ov-base.h (octave_base_value::numel): New function.

2004-11-12  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.1.62.

2004-11-09  John W. Eaton  <jwe@octave.org>

	* OPERATORS/op-int-concat.cc: New file for mixed integer/other
	concatentation operators.
	* Makefile.in (INTTYPE_OP_XSRC): Add it to the list.

	* ops.h (DEFNDCATOP_FN2): New macro.

	* OPERATORS/op-int.h (OCTAVE_CONCAT_FN2,
	OCTAVE_INSTALL_CONCAT_FN2, OCTAVE_DOUBLE_INT_CONCAT_FN,
	OCTAVE_INSTALL_DOUBLE_INT_CONCAT_FN, OCTAVE_INT_DOUBLE_CONCAT_FN,
	OCTAVE_INSTALL_INT_DOUBLE_CONCAT_FN): New macros.

2004-11-09  David Bateman  <dbateman@free.fr>

	* Cell.cc (concat): Delete.
	(Cell::concat): New method.
	* Cell.h: Provide decls.
	
	* oct-map.cc (concat): Delete
	(Octave_map::concat): New method.
	* oct-map.h: Provide decls.
	
	* ov.h (typedef octave_value (*cat_op_fcn) (octave_value&, 
	const octave_value&, const Array<int>&): Change definition of 
	cat_op_fcn so first argument is not constant.

	* ops.h (CATOPDECL): First arg is no longer constant.