@@ -1,3 +1,11 @@
+2004-11-30  John W. Eaton  <jwe@octave.org>
+
+	* Makefile.in (oct-gperf.h): Use -L C++ instead of -L ANSI_C.
+	Use -Z octave_kw_hash option, delete -H and -N options.
+	* lex.l (is_keyword_token): Use octave_kw_hash::in_word_set
+	instead of octave_kw_lookup.
+	(is_keyword): Likewise.
+
 2004-11-22  John W. Eaton  <jwe@octave.org>
 
 	* pt-arg-list.cc (tree_argument_list::convert_to_const_vector):
